order-service/src/main/java/com/example/order/error/FieldValidationError.java
package com.example.order.error;

public record FieldValidationError(
        String field,
        String message
) {
}
